# tidycam

./: .env.example  README.md  pyproject.toml  tidycam_pi.py
