[project]
name = "tidycam"
version = "0.1.0"
description = "Raspberry Pi camera room tidiness checker using Ollama vision models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "requests>=2.31",
]

[project.optional-dependencies]
usb-webcam = [
    "opencv-python>=4.9",
]

[tool.uv]
package = false
